# dropshot-ai

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  analysis.py  base.py  subscription.py  user.py
backend/app/pipeline/: biomechanics.py  claude_coach.py  paddle_detector.py  phase_segmentor.py  pose_estimator.py  tasks.py  video_utils.py
backend/app/routers/: analyses.py  auth.py  subscription.py  upload.py  users.py
backend/app/schemas/: analysis.py  auth.py  subscription.py  upload.py  user.py
backend/app/services/: auth_service.py  notification_service.py  storage_service.py  stripe_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
backend/scripts/: download_models.py  seed_db.py
infrastructure/nginx/: nginx.conf
infrastructure/postgres/: init.sql
infrastructure/redis/: redis.conf
mobile/: .env.example  app.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx  register.tsx  welcome.tsx
mobile/app/(tabs)/: _layout.tsx  home.tsx  profile.tsx  progress.tsx  upload.tsx
mobile/app/analysis/: [id].tsx  processing.tsx
mobile/app/subscription/: paywall.tsx
mobile/src/api/: analyses.ts  auth.ts  client.ts  subscription.ts  upload.ts
mobile/src/hooks/: useAnalysis.ts  useAuth.ts  useSubscription.ts  useUpload.ts
mobile/src/store/: authStore.ts  uploadStore.ts
(+17 files in other folders)
